crates/reinhardt-core/macros/tests/ui/routes_registration/fail/unknown_argument.stderr
error: unknown argument for #[routes]; expected `standalone`, `client_inventory`, or no arguments
 --> tests/ui/routes_registration/fail/unknown_argument.rs:3:10
  |
3 | #[routes(foobar)]
  |          ^^^^^^
